# UI_LINUX_V01

./: Plase.md  README.md  TONG_KET_SO_BO.md  pyrightconfig.json
linux-system-assistant/: README.md  pyproject.toml  pyrightconfig.json  pytest_output.txt  requirements.txt  run.sh  run_my_tests.sh  run_tests.py
linux-system-assistant/AI_Coding_System_Check_Skill/: README.md  SKILL.md
linux-system-assistant/AI_Coding_System_Check_Skill/checklists/: function_test_checklist.md  regression_checklist.md  system_checklist.md
linux-system-assistant/AI_Coding_System_Check_Skill/data/: safe_linux_commands.json
linux-system-assistant/AI_Coding_System_Check_Skill/prompts/: prompt_for_ai_coding.md
linux-system-assistant/AI_Coding_System_Check_Skill/protocols/: 01_safe_system_audit.md  02_function_test_protocol.md  03_error_detection_and_debugging.md  04_test_execution_strategy.md  05_bug_logging_and_evidence.md  06_quality_gates_acceptance.md
linux-system-assistant/AI_Coding_System_Check_Skill/reports/: test_report.md
linux-system-assistant/AI_Coding_System_Check_Skill/templates/: bug_report.md  (+1 more)
linux-system-assistant/packaging/: linux-system-assistant.desktop
linux-system-assistant/scripts/: create_desktop_file.sh  detect_system.sh  install.sh  uninstall.sh
linux-system-assistant/skill_UI_full_repair/: 00_CURRENT_UI_PROBLEMS.md  01_TARGET_UI_STANDARD.md  02_TASK_ROADMAP.md  README.md  SKILL_UI_FULL_REPAIR.md
linux-system-assistant/tests/: test_command_manager.py  test_monitor.py  test_process_manager.py  test_safety_quality.py  test_system_tools.py
(+116 files in other folders)
