[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-system-assistant"
version = "0.1.0"
description = "Floating glass widget for Linux system monitoring and safe control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "psutil>=5.9.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
nvidia = ["pynvml"]
dev = ["pytest>=7.0", "pyinstaller>=6.0"]

[project.scripts]
linux-system-assistant = "sys_assistant.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
